# DiggerString

./: CMakeLists.txt  LICENSE  README.md  download.txt  ihbjgsvduc.luac  test.cpp  version.txt
include/: DiggerString.h
src/: CMakeLists.txt  Capitalize.cpp  Contains.cpp  Count.cpp  EndsWith.cpp  Find.cpp  IsEmpty.cpp  IsNumeric.cpp  Join.cpp  Pad.cpp  Palindrom.cpp  Replace.cpp  ReplaceAll.cpp  ReverseWord.cpp  Shuffle.cpp  Split.cpp  StartWith.cpp  ToDouble.cpp  ToInt.cpp  ToLower.cpp  ToUpper.cpp  Trim.cpp  capitalizeWords.cpp  charAt.cpp  countWords.cpp  extractDigits.cpp  isValidEmail.cpp  isValidIpAddress.cpp  isValidUrl.cpp  removeWhitespace.cpp  replaceMultiple.cpp  reverseLines.cpp  substring.cpp  toBinary.cpp  toCamelCase.cpp  toHex.cpp  toSnakeCase.cpp
